--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #55a0ff;
+  --primary: #3D55A5;
   --secondary: #9B9B9B;
   --light: #F5F5F5;
   --dark: #161616;
@@ -1053,12 +1053,16 @@ div#slider-range {
 }
 .submitButton {
   background: #3D55A5;
-  border: 1px solid #3D55A5;
+  border: 0px solid #3D55A5;
   color: #fff;
-  text-transform: unset;
-  padding: 4px 95px;
-  border-radius: 20px;
-  font-size: 18px;
+  text-transform: uppercase;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
+  display: block;
+  width:100%;
+  text-align: center;
+  padding:10px 0!important;
 }
 .input-box {
   /* float: revert; */
@@ -1262,10 +1266,10 @@ button .inner-pulse {
 
 /* Footer Css Start */
 footer.footerSection {
-  padding: 80px 0px 20px 0px;
-margin-top: 5px ;
+  padding: 50px 0px;
   background-image: linear-gradient(0deg, #ECECEC, #ECECEC, #ECECEC03);
-
+  border-top: 1px solid #c4c4c4;
+  margin-top: 150px;
 }
 .banneerSection {
   
@@ -2468,25 +2472,7 @@ ul.tandcLink2 a {
   font-size: 14px;
 }
 
-input#submitButton1 {
-  background: #3D55A5;
-  border: 1px solid #3D55A5;
-  color: #fff;
-  text-transform: lowercase;
-  padding: 4px 95px;
-  border-radius: 20px;
-  font-size: 18px;
-}
 
-input#submitButton2 {
-  background: #fff;
-  border: 1px solid #3D55A5;
-  color: #3D55A5;
-  text-transform: lowercase;
-  padding: 4px 95px;
-  border-radius: 20px;
-  font-size: 18px;
-}
 
 article {
   min-width: 230px;
@@ -4133,8 +4119,6 @@ line-height: 40px;
   height: 100%;
 }
 p {
-
-  text-transform: lowercase !important;
    word-wrap: break-word;
 }
 h2 {
@@ -4409,4 +4393,126 @@ width: 1220px !important;
   padding: 15px;
   font-weight: 500;
   width: 500px !important;
+}
+.swiper{
+  padding:45px 0!important;
+}
+.jobRequirementPanel h2 {
+  color: #3D55A5;
+  font-weight: 800 !important;
+  font-size: 32px !important;
+  padding: 15px 0 0 0;
+}
+.jobRequirementPanel .text-center{
+  text-align: center;
+}
+.btn-primary{
+  background-color: #3D55A5!important;
+  border:0!important;
+  padding:6px 15px!important;
+}
+.certificateCourse{
+  background-image: url("./img/online_courses.png");
+  background-repeat: no-repeat;
+  margin: 45px 0;
+  min-height: 300px;
+  position: relative;
+  padding: 100px 0;
+}
+.certificateCourse .overlayBlack{
+  position: absolute;
+  background: rgba(0,0,0,0.5);
+  left:0;
+  top:0;
+  width:100%;
+  height: 100%;
+}
+.colorWhite{
+  color:#fff!important;
+}
+.textUpOverlay{
+  position:relative;
+  z-index: 999;
+}
+.colorBlue{
+  color:#3D55A5!important;
+  font-weight:bold;
+}
+.tags ul{
+  list-style: none;
+  margin:0;
+  padding:0;
+}
+.tags{
+  padding:15px 0;
+}
+.tags ul li{
+  margin: 5px 10px 5px 0px;
+  display:inline-block
+}
+.tags ul li a{
+  background-color: #3C3C3C;
+  padding:5px 10px;
+  color:#fff;
+  border-radius: 5px;;
+}
+.careerPath{
+  background-image: url("./img/1637330549549.jpg");
+  background-size: 100%;
+  background-position: 0px -200px;
+}
+.p5{
+  padding:100px 0;
+}
+.p15{
+  padding:15px 0!important;
+}
+.m5{
+  margin-top:20px;
+}
+.tradeCommunity h2{
+  font-size: 50px!important;
+}
+.loginPanel input[type="text"], .loginPanel input[type="password"]{
+  padding:10px 15px!important;
+}
+.orPosition{
+  margin-bottom:25px;
+}
+.btn-outline-primary {
+  border: 1px solid #3d55a5 !important;
+  color: #3d55a5 !important;
+  padding: 7px 18px !important;
+  text-transform: uppercase;
+}
+.btn-outline-primary:hover{
+  background-color:#3d55a5 !important;
+  color:#fff!important;
+}
+.subscribeNow{
+  width:50%;
+  margin:25px auto;
+}
+.subscribeNow ul{
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+.subscribeNow ul li{
+  display:inline-block;
+  width:50%;
+  padding:15px 15px;
+} 
+.subscribeNow ul li.text-right{
+  text-align:right;
+}
+.subscribeNow ul li input[type="text"]{
+  border:1px solid #c4c4c4;
+  border-radius: 5px;
+}
+.subscribeNow ul li .subscribeBtn{
+  border-radius: 5px;
+  font-size: 14px!important;
+  text-transform: uppercase;
+  font-weight:bold;
 }
