--- a/src/App.css
+++ b/src/App.css
@@ -4535,3 +4535,9 @@ width: 1220px !important;
   color: #0000 !important;
   border-radius: 5px !important;
 }
+p.mess {
+  text-align: center;
+  font-size: 18;
+  color: green !important;
+  font-size: 15px !important;
+}
