--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,7 @@ select {
 
 .leftsectionset {
   max-height: 100% !important;
-  min-height: 840px !important;
+ 
   overflow-y: auto;
   overflow-x: hidden;
   margin: 0px;
@@ -645,7 +645,7 @@ a {
 
 .bannerHeadingjob h1 {
   color: #fff;
-  font-size: 60px;
+  font-size: 40px;
   margin-top: 0px;
 }
 
@@ -1169,6 +1169,17 @@ input[type=checkbox] {
 
 
 @media only screen and (max-width:768px) {
+  a.nav-item.nav-link.noti {
+    background-color: initial!important;
+    border-radius: 50%!important;
+    margin: 0!important;
+    padding: 7px 11px!important;
+    background-color: #3C3C3C !important;
+    /* width: 100%; */
+    width: 40px;
+    height: auto !important;
+    color: #fff !important;
+}
   .programsSideBar {
     margin-bottom: 20px;
   }
@@ -3170,7 +3181,7 @@ h4.gName {
 }
 
 .groupFollowersjob {
-  font-size: 25px !important;
+  font-size: 20px !important;
   font-family: 'Lato';
 }
 
@@ -3179,6 +3190,11 @@ h4.gName {
 .rowpadingsp {
 
   margin-top: 20px;
+}
+h6.jobsearch {
+  font-size: 20px;
+  color: #454545 !important;
+  font-weight: 700;
 }
 
 
@@ -3369,7 +3385,7 @@ h6 {
 }
 
 .rowpadingsp {
-  margin-top: 20px !important;
+  margin-top: 10px !important;
 }
 
 .programTitleuser h1 {
@@ -3385,9 +3401,10 @@ h6 {
 }
 
 .programTitleuser p {
-  font-size: 13px !important;
+  font-size: 10px !important;
   margin-left: 8px !important;
   color: #fff !important;
+  font-weight: 100 !important;
 }
 
 h1.heding1 {
